--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.17.0
   flutter_native_splash: ^1.2.0
   flutter_launcher_icons: ^0.9.1
+  fl_chart: ^0.36.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -77,8 +78,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/dollar_sign.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
