--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_native_splash: ^1.2.0
   flutter_launcher_icons: ^0.9.1
   fl_chart: ^0.36.2
+  animated_digit: ^3.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
